Fix top bar margin-bottom overflowing over main content

--- a/yeoman/app/styles/_header.scss
+++ b/yeoman/app/styles/_header.scss
@@ -1,5 +1,6 @@
 
 .top-bar {
+  margin-bottom: 0px;
 
   .toggle-edit {
     display: block;
